<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MovesList">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/moves_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_ballet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ballet" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_macarena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macarena" />
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
    </androidx.viewpager.widget.ViewPager>
</LinearLayout>
