<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/start_page_layout"
    tools:context=".StartPage">

    <LinearLayout
        android:id="@+id/song_moves_layer"
        android:layout_width="275dp"
        android:layout_height="349dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="25dp"
            android:text="@string/song"
            android:textAppearance="@style/TextAppearance.Shrine.Title" />

        <Spinner
            android:id="@+id/songs_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/moves"
            android:textAppearance="@style/TextAppearance.Shrine.Title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_moves_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/open_moves_list"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="380dp"
        android:layout_marginTop="25dp"
        android:text="@string/play"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.Shrine.Title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_music_button"
        android:layout_width="73dp"
        android:layout_height="64dp"
        android:layout_marginLeft="380dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        app:icon="@drawable/play_button"
        app:iconGravity="top"
        app:iconSize="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="380dp"
        android:layout_marginTop="165dp"
        android:text="@string/show_dance"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.Shrine.Title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_dance_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginLeft="380dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        app:icon="@drawable/show_dance_button"
        app:iconSize="44dp"
        app:iconGravity="top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:layout_marginTop="316dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <HorizontalScrollView
            android:id="@+id/hor_scroll_view_timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_layout_on_anim_timeline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
